[package]
name = "knowledge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "knowledge"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
chrono = { version = "0.4.31", features = ["default"] }
color-eyre = "0.6.2"
tracing-error = "0.2.0"
tracing-appender = "0.2.3"
toml = "0.8.8"
clap = "4.4.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
axum = { version = "0.7.4", features = [] }
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
cang-jie = "0.18.0"
tantivy = "0.21.1"